--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,16 @@
     <string name="food_aid">FOOD AID</string>
     <string name="login">Login</string>
     <string name="forgot_password">Forgot Password</string>
-    <string name="enter_your_email">enter_your_email</string>
-    <string name="enter_your_password">enter_your_password</string>
-    <string name="register">register</string>
+    <string name="enter_your_email">Enter your e-mail</string>
+    <string name="enter_your_password">Enter your password</string>
+    <string name="register">Register</string>
     <string name="enter_your_full_name">Enter your full name</string>
+    <string name="enter_your_email_address">Enter your e-mail address</string>
+    <string name="welcome">Welcome!</string>
+    <string name="logout">Logout</string>
+    <string name="email_address">Email Address:</string>
+    <string name="full_name">Full Name:</string>
+
+
+
 </resources>
