--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
 
     <string name="reset">Reset</string>
     <string name="enter_your_phone_number">enter your phone number</string>
+    <string name="user">user</string>
 
 
 </resources>
