--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="enter_your_full_name">Enter your full name</string>
 
     <string name="reset">Reset</string>
-    <string name="enter_your_phone_number">enter your phone number</string>
+    <string name="enter_your_phone_number">Enter your phone number</string>
     <string name="user">user</string>
 
 
